[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/menu/menu_row.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/menu/menu_rows/control_menu_row.gd" type="Script" id=2]

[node name="ControlMenuRow" groups=["control_menu_rows"] instance=ExtResource( 1 )]
script = ExtResource( 2 )
_focus_path = NodePath("Content/Button")

[node name="Label" type="Label" parent="Content" index="0"]
anchor_bottom = 1.0
margin_right = 248.0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Control"
valign = 1
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Content" index="1"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -248.0
margin_right = -4.0
rect_min_size = Vector2( 244, 0 )
mouse_filter = 1
size_flags_horizontal = 0
toggle_mode = true
text = "Input"
flat = true
clip_text = true
align = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="InputTimer" type="Timer" parent="." index="4"]
wait_time = 8.0
one_shot = true

[connection signal="toggled" from="Content/Button" to="." method="_on_button_toggled"]
[connection signal="timeout" from="InputTimer" to="." method="_on_input_timer_timeout"]
